2009-09-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies/MsNetFrameworkBackend.cs: On
	  windows, include the MD startup path in the tools path list,
	  since we may bundle some tools in the setup.

2009-09-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies/TargetFrameworkBackend.cs: In
	  GetToolPaths, unquote quoted paths.

2009-09-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Execution/ProcessHostController.cs: Added a
	  watch dog in mdhost. The process will exit if the main MD
	  process dies.

	* MonoDevelop.Core.Assemblies/TargetFrameworkBackend.cs:
	  Removed debug code.

2009-09-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies/TargetFrameworkBackend.cs: Log
	  tool search paths.

2009-09-02  Carlo Kok  <ck@remobjects.com>

	* MonoDevelop.Core.Serialization/EnumDataType.cs: Use ignore-case
	  on enums so both "winexe" and "WinExe" work.
	
2009-08-27  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Execution/DisposerFormatterSink.cs: The
	  WaitHandle.WaitOne(int) method was added in an SP, so it is
	  not available in all 3.5 frameworks.

2009-08-27  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Core.csproj:
	* MonoDevelop.Core/LoggingService.cs:
	* MonoDevelop.Core.Logging/RemoteLogger.cs:
	* MonoDevelop.Core.Execution/ProcessHostController.cs:
	* MonoDevelop.Core.Execution/IProcessHostController.cs: Allow
	  routing log messages from external processes into the main
	  MD process.

2009-08-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies/PcFileCache.cs: Don't try to
	  store custom data if a package is not valid.

2009-08-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies/PcFileCache.cs: Another fix to
	  make it build with .net 2.0.

2009-08-24  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.Assemblies/PcFileCache.cs: Make it
	  buildable with .net 2.0.
